--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,11 @@ on:
     branches: [master]
 
 jobs:
-  build:
-    runs-on: [ubuntu-latest, windows-latest, macos-latest]
-
+  tests:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
         node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
