--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@walletconnect/alephium-provider": "file:../walletconnect-monorepo/packages/alephium-provider",
+    "@walletconnect/client": "^2.0.0-beta.26",
+    "@walletconnect/qrcode-modal": "^1.7.7",
+    "@walletconnect/types": "^2.0.0-beta.26",
     "alephium-js": "^1.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -22,6 +26,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
+    "walletconnect-monorepo": "file:../walletconnect-monorepo",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
