--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "voting-new",
+  "name": "my-dapp",
   "version": "0.1.0",
-  "private": true,
+  "config": {
+    "alephium_version": "1.4.0-alpha3"
+  },
+  "type": "commonjs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^16.11.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/react": "^18.0.3",
+    "@types/react-dom": "^18.0.0",
+    "@walletconnect/client": "^2.0.0-beta.26",
+    "@walletconnect/types": "^2.0.0-beta.26",
+    "alephium-js": "^1.1.3",
+    "alephium-walletconnect-provider": "^0.0.3",
+    "alephium-web3": "0.5.0",
+    "qrcode.react": "^3.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "build-contracts": "npx tsc --build . && node dist/scripts/build.js",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext ts",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +54,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0"
   }
 }
