--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["prettier", "plugin:prettier/recommended", "plugin:react/recommended"],
+  "extends": ["prettier", "plugin:react/recommended"],
   "rules": {
     "header/header": [0]
   },
